Fix Java 8 compilation error: isBlank() -> trim().isEmpty()